# clacheless

./: .containerignore  .gitignore  Cargo.toml  Containerfile  README.md  build.rs  deny.toml  index.yaml
.github/workflows/: release-on-merge.yml
charts/clacheless/: Chart.yaml  values.yaml
charts/clacheless/templates/: NOTES.txt  secret-dc.yaml  service.yaml  statefulset-service.yaml  statefulset.yaml
charts/clacheless/templates/tests/: test-connection.yaml
clacheless/: Cargo.toml  README.md  build.rs
clacheless-api-rest/: Cargo.toml  README.md  openapi.json
clacheless-api-rest/src/: rest_api.rs
clacheless-api-rest/src/rest_api/common/: api_error_mapper.rs
clacheless-api-rest/src/rest_api/http_resources/: get_object.rs  put_object.rs
clacheless-bin/: Cargo.toml  README.md
clacheless-bin/src/: config.rs  main.rs
clacheless/proto/: stateshare.proto
clacheless/src/: clacheless_error.rs  distributed_cache.rs  lib.rs  time.rs  util.rs
clacheless/src/distributed_cache/: cluster_view.rs  grpc_client.rs  grpc_server.rs  local_cache.rs  peer_authenticator.rs
clacheless/src/distributed_cache/cluster_view/: local_sequence.rs  node_view.rs
clacheless/tests/: test_local_instance.rs
